[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heapx"
version = "0.1.0"
description = "Python bindings for the heapx C heap library."
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-only"
license-files = ["extern/heapx/LICENSE"]
authors = [
  { name = "Matteo Giorgi" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: C",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "build>=1.2",
  "cibuildwheel>=3.4,<4",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = [
  "*-musllinux_*",
  "pp*",
]
test-requires = "pytest>=8"
test-command = "python -m pytest {project}/tests"
build-verbosity = 1

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["auto"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
